--- a/HTML/05/02-사용자 입력을 위한 input태그/text,password타입.html
+++ b/HTML/05/02-사용자 입력을 위한 input태그/text,password타입.html
@@ -9,10 +9,14 @@
 <body>
     <form>
         <fieldset>
-            <label>아이디 : <input type="text" id="user-id" size="10"></label>
+            <label>아이디 : <input type="text" id="user-id" size="10" value="아이디 입력"></label>
             <label>비밀번호 : <input type="password" id="user-pw" size="10"></label>
             <input type="submit" value="로그인">
         </fieldset>
     </form>    
+    <!--text, password 속성들
+        size : 필드의 길이를 지정
+        value : 텍스트 필드 요소가 화면에 표시될 때 빈 텍스트 필드에 표시되는 부분
+        maxlength : 텍스트 필드와 비밀번호 필드에 입력할 수 있는 최대 문자 수 지정-->
 </body>
 </html>
