--- a/CSS/index.html
+++ b/CSS/index.html
@@ -16,5 +16,7 @@
     <div style="color:red;">안녕하세요!</div>
     <span>안녕하세요@</span>
     <p>안녕하세요#</p>
+    <div class="box">안녕하세요$</div>
+    <div class="box box2">안녕하세요%</div>
 </body>
 </html>
