--- a/HTML/02/index.html
+++ b/HTML/02/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
-<html lang = "ko">
-    <head>
+<html lang="ko">
+
+<head>
+    <title>HTML 요소 레퍼런스</title>
+    <base href="./css/">
     <meta charset="UTF-8">
-    <title>
-        HTML 기본 문서
-    </title>
-    </head>
-    <body>
-        <h1>프런트엔드 웹 개발</h1>
-        <hr>
-        <p>HTML5</p>
-        <p>CSS</p>
-        <p>자바스크립트</p>
-    </body>
+    <meta name="author" content="홍문기">
+    <meta name="description" content='홍문기 사이트'>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewpoint" content="width=device-width">
+    <link rel="stylesheet" href="main.css">
+    <style>
+        div {
+            color: red;
+            background-color: blue;
+        }
+    </style>
+
+
+</head>
+
+<body>
+    <div>ㅎㅎ</div>
+</body>
+
 </html>
