contents tag example

--- a/HTML/03/index.html
+++ b/HTML/03/index.html
@@ -1,16 +1,50 @@
 <!DOCTYPE html>
-<html lang = "ko">
-    <head>
+<html lang="ko">
+
+<head>
     <meta charset="UTF-8">
-    <title>
-        HTML 기본 문서
-    </title>
-    </head>
-    <body>
-        <h1>프런트엔드 웹 개발</h1>
-        <hr>
-        <p>HTML5</p>
-        <p>CSS</p>
-        <p>자바스크립트</p>
-    </body>
+    <title>컨텐츠 구분 예제</title>
+    <link rel="stylesheet" href="./main.css">
+</head>
+
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li>메뉴1</li>
+                <li>메뉴2</li>
+                <li>메뉴3</li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section>
+            <h1>Section</h1>
+            <article>
+                <h2>Article1</h2>
+                <p>Contents...</p>
+            </article>
+            <article>
+                <h2>Article2</h2>
+                <p>Contents...</p>
+            </article>
+            <article>
+                <h2>Article3</h2>
+                <p>Contents...</p>
+            </article>
+        </section>
+        <aside>
+            Aside
+        </aside>
+    </main>
+
+    <footer>
+        <address>
+            <a href="mailto:hmg19940201@naver.com">hmg19940201@naver.com</a>
+            <a href="tel:+821012345678">010-1234-5678</a>
+        </address>
+    </footer>
+</body>
+
 </html>
