--- a/HTML/07/index.html
+++ b/HTML/07/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
     <table>
         <tr>
@@ -24,7 +26,7 @@
             <td>숫자</td>
             <td>7</td>
         </tr>
-    </table>   
+    </table>
     <br>
     <table>
         <tr>
@@ -38,6 +40,33 @@
             <td headers="th-value">A</td>
             <td headers="th-value">7</td>
         </tr>
-    </table>   
+    </table>
+    <br>
+    <table>
+        <caption>데이터 타입과 값</caption>
+        <colgroup>
+            <col>
+            <col style="background-color: tomato;" span="2">
+            <col>
+        </colgroup>
+
+        <tr>
+            <th></th>
+            <th>타입</th>
+            <th>값</th>
+        </tr>
+        <tr>
+            <th>1</th>
+            <td>알파벳</td>
+            <td>A</td>
+        </tr>
+        <tr>
+            <th>2</th>
+            <td>숫자</td>
+            <td>7</td>
+        </tr>
+    </table>
+
 </body>
+
 </html>
