--- a/HTML/08/index3.html
+++ b/HTML/08/index3.html
@@ -13,6 +13,19 @@
 
     <!-- 라벨 가능 요소를 포함 -->
     <label><input type="checkbox">동의하십니까?</label>
+
+    <input type="reset" value="초기화">
+    <button type='reset'>초기화</button>
     
+    <input type="submit" value="제출">
+    <button type="submit">제출</button>
+
+    <button onclick="doit()">클릭!</button>
+
+    <script>
+        function doit(){
+            alert("클릭");
+        }
+    </script>
 </body>
 </html>
