--- a/HTML/09/index2.html
+++ b/HTML/09/index2.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div id="me" data-my-name="Moong" data-my-age="19">
+    <div id="me" data-my-name="Moong" data-my-age="19" draggable="true">
         MG
     </div>
 
