--- a/CSS/05/index5.html
+++ b/CSS/05/index5.html
@@ -14,5 +14,7 @@
     <div class="container">
         <div class="for-scroll"></div>
     </div>
+    <div class="box1"></div>
+    <div class="box2"></div>
 </body>
 </html>
